1 change by Nuxt Studio

--- a/content/1.getting-started/1.index.md
+++ b/content/1.getting-started/1.index.md
@@ -3,11 +3,11 @@ title: Introduction
 description: Welcome to Nuxt UI Pro documentation template.
 ---
 
-This template is a ready-to-use documentation template made with [Nuxt UI Pro](https://ui.nuxt.com/pro), a collection of premium components built on top of [Nuxt UI](https://ui.nuxt.com) to create beautiful & responsive Nuxt applications in minutes.
+This template is a ready-to-use documentation template made with [Nuxt UI Pro](https://ui.nuxt.com/pro), a collection of premium components built on top of [Nuxt UI](https://ui.nuxt.com) to create beautiful & responsive Nuxt applications in hours!
 
 There are already many websites based on this template:
 
-- [Nuxt](https://nuxt.com) - The Nuxt website!!!! up
+- [Nuxt](https://nuxt.com) - The Nuxt website
 - [Nuxt UI](https://ui.nuxt.com) - The documentation of `@nuxt/ui` and `@nuxt/ui-pro`
 - [Nuxt Image](https://image.nuxt.com) - The documentation of `@nuxt/image`
 - [Nuxt Content](https://content.nuxt.com) - The documentation of `@nuxt/content`
